--- a/style.css
+++ b/style.css
@@ -27,3 +27,42 @@ h1{
 section{
     height: 600px;
 }
+.buttons{
+    text-decoration: none;
+    color: #ffffff;
+    padding: 10px 20px;
+    background-image: linear-gradient(45deg, red, tomato);
+    border-radius: 6px;
+}
+.dream-banner{
+    background: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.dream-banner h2 {
+    font-size: 40px;
+}
+.orange-higlight{
+    color: orange;
+}
+.single-experience{
+    height: 50%;
+    box-shadow: grey 10px 10px 40px;
+    text-align: left;
+    padding-right: 20px;
+}
+.experiance-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid red;
+}
+
+footer{
+    text-align: center;
+}
+#full-stack-2{
+    border-left: solid black 7px;
+}
